plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

group = 'fr.ludos'
version = '1.0.0'

repositories {
    mavenCentral()
    mavenLocal()
    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots/' }
    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
    maven { url 'https://repo.papermc.io/repository/maven-public/' }
    maven { url 'https://repo.dmulloy2.net/repository/public/' }
}

dependencies {
    compileOnly 'net.kyori:adventure-api:4.20.0'
    implementation 'net.kyori:adventure-api:4.20.0'
    implementation("net.kyori:adventure-text-minimessage:4.25.0")

    compileOnly 'org.apache.commons:commons-lang3:3.12.0'
    compileOnly 'org.spigotmc:spigot-api:1.19-R0.1-SNAPSHOT'
    compileOnly 'io.papermc.paper:paper-api:1.19-R0.1-SNAPSHOT'

    compileOnly 'net.dmulloy2:ProtocolLib:5.4.0'
}

// shadowJar {
//     // relocate 'net.kyori.adventure', 'fr.ludos.adventure'
//     minimize()
// }

// build.dependsOn shadowJar
// shadowJar {
//     archiveBaseName.set('LudosPlugin')
//     archiveClassifier.set('') // Removes "-all" from the name
//     archiveVersion.set('1.0.0')
// }

sourceSets {
    main {
        output.dir("build/classes/java/main")
    }
}

tasks.withType(Jar).configureEach {
    destinationDirectory = layout.buildDirectory.dir("output")
}

compileJava.options.encoding = 'UTF-8'